    - Reformatting mkrescue.8 manpage. (thanks to Martin E. Schauer)

  Sources
  -------
    - Remove obsolete BIOS workaround from 2002 (src/second.S)
    - Add information about -H option.   (src/lilo.c)
    - Save errno for second command.     (src/device.c)
    - Fix missleading error message.     (src/geometry.c)
    - Remove obsolete OS/2 code.   (src/boot.c, src/temp.c)

  General
  -------
    - Remove obsolete OS/2 code.   (make.vars, src/Makefile)


Changes for version 23.1 (04-Nov-2010) - Joachim Wiedorn

  Documentations
  --------------
    - 'make clean' delete all created documentation files.
    - many small typos in manpages.
    - Remove obsolete ifpdf definition.

  Sources
  -------
    - Optimize and update menue header line.  (src/crt.S)
    - Fix some typos in sources.  (src/bsect.c, src/raid.c)
    - LVM volume as root device.  (src/bsect.c)
    - Remove patch for inaccessible disks (src/geometry.c)
        and add remarks in README file.
    - Better computing size of uncompressed kernel. (src/boot.c)
    - Working on degraded RAID device.      (src/raid.c)
        (thanks to Christian Schöninger)
    - Use for MD RAID newer 1.0 specification. (src/geometry.c)
        (thanks to Robert de Bath)             (src/raid.c)

  General
  -------
    - Use better 'checkit' for newer gcc.  (checkit)
    - Remove very old scripts.      (mkbdist,mksdist,QuickInst)
    - Create new makefile-based script QuickInst.
    - Create new hook scripts for kernel and initramfs.
    - Add new target 'uninstall' for src, man, hooks.
    - Recreate and add background images as uuencoded files and
        move images + config files into new 'image' directory.
    - Add new file TOOLS listing needed tools / packages.
    - Remove all unneeded stuff with old /boot/boot-* files.
    - Add new example file for lilo.conf for newer lilo.


Changes for version 23.0 (28-June-2010) - Joachim Wiedorn

  Documentations
  --------------