@@ -2,7 +2,7 @@ LInux LOader (LILO) program code, documentation, and auxiliary programs:
 
 Copyright 1992-1998 Werner Almesberger
 Copyright 1999-2007 John Coffman
-Copyright 2009-2010 Joachim Wiedorn
+Copyright 2009-2011 Joachim Wiedorn
 All rights reserved.
 
 
